# openwalker

./: CMakeLists.txt  TODO.txt
gol/: cell.cpp  cell.h  cranking_grid.cpp  cranking_grid.h  main.cpp
include/openwalker/: openwalker.h
ow_f_lib/include/ow_f_lib/: ow_f_lib.h
ow_f_lib/src/: console_explorer_slave.cpp  console_explorer_slave.h  manipulator.cpp  manipulator.h  menu.cpp  menu.h  named_virtual_pointer.cpp  named_virtual_pointer.h  object_viewer.cpp  object_viewer.h  ow_f_lib.cpp  ow_f_lib.h  random_walker.cpp  random_walker.h  sfml_viewer.cpp  sfml_viewer.h  spawn_utils.cpp  spawn_utils.h  terminal_viewer.cpp  terminal_viewer.h
owdemo/: common_prop.cpp  common_prop.h  main.cpp  owdemo_main.h  road.cpp  road.h  water_carrier.cpp  water_carrier.h  well.cpp  well.h
proxy/: main.cpp
src/: _fwd.h  clone.cpp  clone.h  console_explorer_slave.cpp  console_explorer_slave.h  context.cpp  context.h  dirt.cpp  dirt.h  event.cpp  event.h  grid.cpp  grid.h  influence.cpp  influence.h  ivec2comparator.cpp  ivec2comparator.h  log.cpp  log.h  main.cpp  main.h  master.cpp  master.h  misc_utils.cpp  misc_utils.h  network.cpp  network.h  node.cpp  node.h  properties.cpp  properties.h  random_walker.cpp  random_walker.h  slave.cpp  slave.h  slicer.cpp  slicer.h  structure.cpp  structure.h  walker.cpp  (+5 more)
test/: test.cpp  test.h
tstlib/: test.cpp  test.h
